# ospsd-team-11

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  design.md  main.py  mkdocs.yml  pyproject.toml
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
components/calendar_client_api/: README.md  pyproject.toml
components/calendar_client_api/src/calendar_client_api/: __init__.py  client.py  event.py  exceptions.py  registry.py
components/calendar_client_api/src/calendar_client_api/tests/: test_client.py
components/calendar_client_api/tests/: test_client.py  test_event.py  test_exceptions.py  test_registry.py
components/google_calendar_client_impl/: README.md  pyproject.toml
components/google_calendar_client_impl/src/google_calendar_client_impl/: __init__.py  client.py  client_impl.py  event_impl.py
components/google_calendar_client_impl/tests/: test_authentication.py  test_client_crud.py  test_dependency_injection.py  test_event_impl.py
components/google_calendar_service/: README.md  pyproject.toml
components/google_calendar_service/src/: main.py
components/google_calendar_service/src/google_calendar_service/: main.py  oauth_utils.py  session_store.py  settings.py
components/google_calendar_service/src/google_calendar_service/routes/: __init__.py  auth_routes.py  event_routes.py  health_routes.py
components/google_calendar_service/tests/: test_main.py  test_oauth.py  test_session_store.py
components/google_calendar_service_adapter/: README.md
components/google_calendar_service_adapter/src/google_calendar_service_adapter/: __init__.py  client_adapter.py
components/google_calendar_service_adapter/tests/: test_client_adapter.py  test_error_translation.py  test_event_adapter.py
docs/: component.md  index.md
docs/api/: calendar_client_api.md  event_api.md  google_calendar_api_client.md  google_calendar_client_impl.md  google_calendar_event_impl.md  google_calendar_service.md  google_calendar_service_adapter.md
terraform/: main.tf
tests/e2e/: test_application.py  test_application_ci.py
tests/integration/: test_client_integration.py  test_di.py
