[project]
name = "calendar-client-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calendar_client_api"]

[tool.hatch.build.targets.wheel.force-include]
"src/calendar_client_api/py.typed" = "calendar_client_api/py.typed"
