[project]
name = "google-calendar-client-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "calendar-client-api",
]

[tool.uv.sources]
calendar-client-api = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_calendar_client_impl"]

[tool.hatch.build.targets.wheel.force-include]
"src/google_calendar_client_impl/py.typed" = "google_calendar_client_impl/py.typed"

[tool.ruff]
line-length = 100
target-version = "py313"
extend = "../../pyproject.toml"

#[tool.ruff.lint]
#ignore = []
